--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.85.5",
+    "@types/qrcode": "^1.5.5",
     "antd": "^5.25.2",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.17",
     "flatpickr": "^4.6.13",
     "next": "15.2.3",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
