--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.17",
     "flatpickr": "^4.6.13",
     "next": "15.2.3",
