feat: update API URL handling and improve user authentication flow

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 REACT_APP_ENV=development
 
 NEXT_PUBLIC_TOKEN_CRYPTO=954e7df9-66b0-4832-a2f4-c4abc9ae051b
+
+NEXT_PUBLIC_API_URL=http://localhost:4000
