--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.17",
     "flatpickr": "^4.6.13",
+    "immer": "^10.1.3",
     "next": "15.2.3",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
@@ -45,7 +46,9 @@
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
-    "yup": "^1.7.0"
+    "use-sync-external-store": "^1.6.0",
+    "yup": "^1.7.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
