--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.0",
