feat: payment integration components

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,6 @@
 {
-    "**/*.ts": [
-        "pnpm eslint --fix"
+    "**/*.{ts,tsx}": [
+        "eslint --fix",
+        "prettier --write"
     ]
 }
