--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^11.0.5",
+    "stripe": "^20.0.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
     "use-sync-external-store": "^1.6.0",
