--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-social-media-embed": "^2.5.18",
     "react-toastify": "^11.0.5",
     "stripe": "^20.0.0",
     "swiper": "^11.2.0",
